# h3ronpy

./: .pre-commit-config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/h3arrow/: CHANGES.md  Cargo.toml  README.md
h3ronpy/: Cargo.toml  justfile  pyproject.toml
h3ronpy/docs/source/: index.rst  license.rst
h3ronpy/docs/source/usage/: raster.rst  vector.rst
h3ronpy/python/h3ronpy/: __init__.py  raster.py  vector.py
h3ronpy/python/h3ronpy/pandas/: raster.py  vector.py
h3ronpy/tests/arrow/: test_coordinates.py  test_neighbor.py
h3ronpy/tests/pandas/: test_vector.py
h3ronpy/tests/polars/: test_series.py
